--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.13.5",
+    "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.575.0",
+    "qrcode": "^1.5.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.13.0"
+    "react-router-dom": "^7.13.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
